--- a/add-offers.html
+++ b/add-offers.html
@@ -406,7 +406,7 @@
                           class="form-control shadow-none rounded-3 border-0"
                           placeholder="Search"
                           style="padding: 12px 18px"
-                          value="Yousuf"
+                          value="01846583745"
                         />
                       </div>
                       <div class="p-4">
@@ -449,12 +449,34 @@
                           class="form-control shadow-none rounded-3 border-0"
                           placeholder="Search"
                           style="padding: 12px 18px"
+                          value="01797354637"
                         />
+                      </div>
+                      <div class="p-4">
+                        <div
+                          class="d-flex justify-content-start align-items-center gap-3"
+                        >
+                          <img
+                            src="https://th.bing.com/th/id/OIP.VqzttYBT7iSOHw-XV5k5_QHaHx?pid=ImgDet&rs=1"
+                            alt="map"
+                            class="img-fluid rounded-circle mb-3 shadow-lg"
+                            style="width: 40px; height: 40px"
+                          />
+                          <div>
+                            <p class="fw-semibold mb-0">Yousuf Ali</p>
+                            <p class="text-muted" style="font-size: 12px">
+                              Class-10, Mirpur-1,dhaka
+                            </p>
+                          </div>
+                        </div>
+                        <button class="btn shadow-none text-info">
+                          <i class="bi bi-plus-lg fw-bold me-3"></i>Add New
+                          Reference
+                        </button>
                       </div>
                     </div>
                   </div>
                 </div>
-
                 <div>
                   <div class="bg-white rounded-3 shadow-lg p-4 mb-4">
                     <p class="mb-4 fw-semibold fs-5">Student Information-1</p>
@@ -834,7 +856,7 @@
                   </div>
                 </div>
                 <div>
-                  <div class="bg-white rounded-3 shadow-lg p-4 mb-4">
+                  <div class="bg-white rounded-3 shadow-lg p-4 mb-4" style="height: 776px;">
                     <p class="mb-4 fw-semibold fs-5">Location</p>
 
                     <div class="">
@@ -904,7 +926,9 @@
                         <img
                           src="https://via.placeholder.com/600x252/87CEFA/000000"
                           alt="map"
-                          class="img-fluid rounded-3"
+                          class="img-flui rounded-3"
+                          height="230px"
+                          width="100%"
                         />
                       </div>
                       <div
@@ -915,8 +939,8 @@
                     </div>
                   </div>
                 </div>
-                <div>
-                  <div class="bg-white rounded-3 shadow-lg p-4 mb-4">
+                <div >
+                  <div class="bg-white rounded-3 shadow-lg p-4 mb-4" style="height: 776px;">
                     <p class="mb-4 fw-semibold fs-5">Title Note</p>
 
                     <div class="">
@@ -927,20 +951,26 @@
                         <textarea
                           class="form-control rounded-3 shadow-none"
                           id="requ"
-                          rows="7"
+                          style="
+                            overflow-y: scroll;
+                            resize: none;
+                            height: 165px;
+                          "
                         >
                         Bootstrap is developed mobile first, a strategy in which we optimize code for mobile devices first and then scale up components as necessary using CSS media queries. To ensure proper rendering and touch zooming for all devices, add the responsive viewport meta tag to your 
                       </textarea
                         >
                       </div>
                       <div class="mb-3">
-                        <label for="spn" class="form-label required"
-                          >Special Note</label
-                        >
+                        <label for="spn" class="form-label">Special Note</label>
                         <textarea
                           class="form-control rounded-3 shadow-none"
                           id="spn"
-                          rows="7"
+                          style="
+                            overflow-y: scroll;
+                            resize: none;
+                            height: 165px;
+                          "
                         >
                         Bootstrap is developed mobile first, a strategy in which we optimize code for mobile devices first and then scale up components as necessary using CSS media queries. To ensure proper rendering and touch zooming for all devices, add the responsive viewport meta tag to your 
                       </textarea
@@ -953,7 +983,11 @@
                         <textarea
                           class="form-control rounded-3 shadow-none"
                           id="staff"
-                          rows="7"
+                          style="
+                            overflow-y: scroll;
+                            resize: none;
+                            height: 165px;
+                          "
                         >
                         Bootstrap is developed mobile first, a strategy in which we optimize code for mobile devices first and then scale up components as necessary using CSS media queries. To ensure proper rendering and touch zooming for all devices, add the responsive viewport meta tag to your 
                       </textarea
@@ -1122,7 +1156,7 @@
                   </div>
                 </div>
                 <div>
-                  <div class="bg-white rounded-3 shadow-lg p-4 mb-4">
+                  <div class="bg-white rounded-3 shadow-lg p-4 mb-4" style="height: 635px;">
                     <p class="mb-4 fw-semibold fs-5">Tutor Requirement-3</p>
 
                     <div class="">
@@ -1200,7 +1234,7 @@
                   </div>
                 </div>
                 <div>
-                  <div class="bg-white rounded-3 shadow-lg p-4 mb-5">
+                  <div class="bg-white rounded-3 shadow-lg p-4 mb-5" style="height: 635px;">
                     <p class="mb-4 fw-semibold fs-5">Others</p>
 
                     <div class="">
@@ -1220,7 +1254,7 @@
                         class="p-4 rounded-3 d-flex justify-content-center align-items-center flex-column"
                         style="
                           box-shadow: 0px 4px 30px 0px rgba(59, 60, 61, 0.15);
-                          height: 375px;
+                          height: 380px;
                         "
                       >
                         <p class="">
@@ -1261,9 +1295,12 @@
 
                     <div class="">
                       <div class="mb-4 border-bottom border-2">
-                        <div class="bg-light rounded-3 p-3 my-3">
+                        <div class="bg-light rounded-3 p-3 my-3"style="height: 150px; overflow-y: scroll;">
                           Lorem Ipsum is simply dummy text of the printing and
                           typesetting industry. Lorem Ipsum has been the
+                          industry's standard dummy text ever since the 1500s,
+                          when an unknown printer took a galley of type and
+                          scrambled it to make a type specimen book.
                           industry's standard dummy text ever since the 1500s,
                           when an unknown printer took a galley of type and
                           scrambled it to make a type specimen book.
@@ -1293,7 +1330,12 @@
                         </div>
                       </div>
                       <div class="mb-4 border-bottom border-2">
-                        <div class="bg-light rounded-3 p-3 my-3">
+                        <div class="bg-light rounded-3 p-3 my-3" style="height: 150px; overflow-y: scroll;">
+                          Lorem Ipsum is simply dummy text of the printing and
+                          typesetting industry. Lorem Ipsum has been the
+                          industry's standard dummy text ever since the 1500s,
+                          when an unknown printer took a galley of type and
+                          scrambled it to make a type specimen book.
                           Lorem Ipsum is simply dummy text of the printing and
                           typesetting industry. Lorem Ipsum has been the
                           industry's standard dummy text ever since the 1500s,
