--- a/job.html
+++ b/job.html
@@ -435,7 +435,10 @@
                 >
                   <div class="row row-cols-1 row-cols-lg-2 mt-4">
                     <div class="mb-4">
-                      <div class="bg-white py-4 shadow-lg rounded-3">
+                      <div
+                        class="bg-white py-4 shadow-lg rounded-3"
+                        style="height: 400px"
+                      >
                         <h5 class="mb-5 ms-4">Parents Information</h5>
                         <div class="">
                           <div
@@ -474,7 +477,10 @@
                       </div>
                     </div>
                     <div class="mb-4">
-                      <div class="bg-white py-4 shadow-lg rounded-3">
+                      <div
+                        class="bg-white py-4 shadow-lg rounded-3"
+                        style="height: 400px"
+                      >
                         <h5 class="mb-5 ms-4">Reference Information</h5>
                         <div class="">
                           <div
@@ -494,12 +500,13 @@
                             style="
                               box-shadow: 0px 4px 30px 0px
                                 rgba(59, 60, 61, 0.15);
+                              height: 135px;
                             "
                           >
                             <p class="">
                               Sms Send (Are you sure to send sms to this offer)
                             </p>
-                            <div class="mt-3 bg-info text-white rounded px-2">
+                            <div class="bg-info text-white rounded px-2">
                               <i class="bi bi-check-lg fs-5"></i>
                             </div>
                           </div>
@@ -618,13 +625,27 @@
                             class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                           >
                             <p class="fw-semibold">Details Address</p>
-                            <p class="">10/5, Tolarbagh, Mirpur-1</p>
+                            <p class="">10/5, Tolarbagh<button
+                              tabindex="0"
+                              style="border: none"
+                              class="badge rounded-pill  text-gray-700 ms-1"
+                              role="button"
+                              data-bs-toggle="popover"
+                              data-bs-trigger="focus"
+                              title="Details Address"
+                              data-bs-content="10/5, Tolarbagh, Mirpur-1, Dhaka , Bangladesh."
+                            >
+                              •••
+                            </button></p>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="mb-4">
-                      <div class="bg-white py-4 shadow-lg rounded-3">
+                      <div
+                        class="bg-white py-4 shadow-lg rounded-3"
+                        style="height: 348px"
+                      >
                         <h5 class="mb-5 ms-4">Title Note</h5>
                         <div class="">
                           <div
@@ -632,8 +653,22 @@
                           >
                             <p class="fw-semibold">Tutor Requirement</p>
                             <p class="">
-                              Lorem Ipsum is simply dummy text of the printing
-                              and typesetting industry.
+                              Lorem Ipsum is simply dummy text of the
+                              printing
+                              <button
+                                tabindex="0"
+                                style="border: none"
+                                class="badge rounded-pill  text-gray-700"
+                                role="button"
+                                data-bs-toggle="popover"
+                                data-bs-trigger="focus"
+                                title="Tutor Requirement"
+                                data-bs-content="Lorem Ipsum is simply dummy text of the
+                                printing.Lorem Ipsum is simply dummy text of the
+                                printing.Lorem Ipsum is simply dummy text of the"
+                              >
+                                •••
+                              </button>
                             </p>
                           </div>
                           <div
@@ -642,7 +677,20 @@
                             <p class="fw-semibold">Special Note</p>
                             <p class="">
                               Lorem Ipsum is simply dummy text of the printing
-                              and typesetting industry.
+                              <button
+                                tabindex="0"
+                                style="border: none"
+                                class="badge rounded-pill  text-gray-700"
+                                role="button"
+                                data-bs-toggle="popover"
+                                data-bs-trigger="focus"
+                                title="Special Note"
+                                data-bs-content="Lorem Ipsum is simply dummy text of the
+                                printing.Lorem Ipsum is simply dummy text of the
+                                printing.Lorem Ipsum is simply dummy text of the"
+                              >
+                                •••
+                              </button>
                             </p>
                           </div>
                           <div
@@ -895,6 +943,14 @@
     ></script>
     <script src="/js/sidebar.js"></script>
     <script src="/js/owl/owl.carousel.min.js"></script>
+    <script>
+      var popoverTriggerList = [].slice.call(
+        document.querySelectorAll('[data-bs-toggle="popover"]')
+      );
+      var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+        return new bootstrap.Popover(popoverTriggerEl);
+      });
+    </script>
     <script>
       $(document).ready(function () {
         $(".owl-carousel").owlCarousel({
