--- a/sms-log.html
+++ b/sms-log.html
@@ -398,7 +398,7 @@
                     class="bg-white p-3 rounded-3 shadow-lg d-flex justify-content-center align-items-center flex-column mb-2"
                   >
                     <p class="fw-bold fs-5 mb-1 mt-3">70</p>
-                    <p class="">Roolup</p>
+                    <p class="">Pullup</p>
                   </div>
                 </div>
                 <div class="ps-2 ps-lg-0">
