--- a/see-condition.html
+++ b/see-condition.html
@@ -393,15 +393,14 @@
                     class="table table-hover bg-white shadow-none"
                     style="border-collapse: collapse"
                   >
-                    <thead>
+                    <thead style="border-bottom: 1px solid #c8ced3">
                       <tr>
-                        <th scope="col" class="text-nowrap">SL</th>
+                        <th scope="col" class="text-nowrap ps-4">SL</th>
                         <th scope="col" class="text-nowrap">Job ID</th>
                         <th scope="col" class="text-nowrap">Tutor Name</th>
                         <th scope="col" class="text-nowrap">Tutor Id</th>
                         <th scope="col" class="text-nowrap">University</th>
                         <th scope="col" class="text-nowrap">Current Stage</th>
-
                         <th scope="col">EM</th>
                         <th scope="col" class="text-nowrap">EM ID</th>
                         <th scope="col" class="text-nowrap">Token Date</th>
