--- a/add-offers.html
+++ b/add-offers.html
@@ -1168,7 +1168,7 @@
                           id="scl"
                           style="padding: 14px 18px"
                         >
-                          <option selected>B A D C High School</option>
+                          <option selected>B A D C E High School</option>
                           <option value="1">Other Schools</option>
                         </select>
                       </div>
