--- a/see-condition.html
+++ b/see-condition.html
@@ -387,7 +387,7 @@
           <div class="col-md-9 ms-sm-auto col-lg-10" style="margin-top: 60px">
             <!-- main content section starts here -->
             <div class="ps-3 py-4" style="padding-right: 13px">
-              <div class="pt-2 shadow-lg rounded-3 bg-white">
+              <div class="p-2 shadow-lg rounded-3 bg-white">
                 <div class="table-responsive">
                   <table
                     class="table table-hover bg-white shadow-none"
@@ -416,7 +416,7 @@
                         >
                           01
                         </td>
-                        <td class="text-info">246785</td>
+                        <td class="text-info ">246785</td>
                         <td class="text-nowrap">Abdur Rahman</td>
 
                         <td class="text-info">
